--- a/index.html
+++ b/index.html
@@ -1297,7 +1297,7 @@
                 
                 <div class="footer-section">
                     <h4>Contact</h4>
-                    <p>📧 hello@continuousimprovement.education</p>
+                    <p>📧 learn@continuousimprovement.education</p>
                 </div>
                 
                 <div class="footer-section">
